# Ai_collab_bot

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  ai_collaboration.py  config.py  example_usage.py  install_deps.sh  main.py  project_manager.py  pyproject.toml  render.yaml  requirements-build.txt  requirements.txt  start.sh
