[project]
name = "ai-collaboration-bot"
version = "0.2.0"
description = "A multi-engine AI chatbot with collaborative capabilities"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "nest_asyncio==1.5.6",
    "python-telegram-bot==20.5",
    "Flask==2.3.2",
    "openai==1.3.5",
    "aiohttp==3.9.1",
    "telethon==1.34.0",
    "groq==0.4.2",
    "openrouter==1.0",
    "pyopenssl==23.2.0",
    "cryptography==41.0.4"
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"
